syntax = "proto3";

package notification;

option go_package = "github.com/Lux-N-Sal/autro-notification/proto";

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse) {}
}

message NotificationRequest {
  string title = 1;
  string description = 2;
  string signal = 3;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}